# sims4-legacy-calculator

./: .breakpoints  .replit  README.md  app.py  cleaned_natal_chart_results.txt  main.py  pyproject.toml  replit.nix  requirements.txt  sims4_globe.py
static/: natal_planets_houses_allzodiacs.xlsx  robots.txt  styles.css
templates/: index.html  sitemap_template.xml
