[tool.poetry]
name = "sims4-legacy-calculator"
version = "0.1.0"
description = ""
authors = ["Yeul Nsu <preshypily@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
dash = "^2.17.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
numpy = "^2.0.0"
openpyxl = "^3.1.5"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"